<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_logo_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/settings_content_description"
        android:src="@drawable/ic_settings"
        app:tint="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo E-mail -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/login_title"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/emailContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/emailContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/mail" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="?android:attr/textColorSecondary"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Campo Contraseña -->
    <LinearLayout
        android:id="@+id/passwordContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailContainer">

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/contra" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="?android:attr/textColorSecondary"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Botón de Google con espacio para ícono -->

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_google_button"
        app:backgroundTint="@null"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/continue_google"
        android:textColor="@color/black"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInicioSesion" />

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/boton"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/continue_button"
        android:textColor="@color/white"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/forgot_password"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>
