<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="4dp">

    <ImageView
        android:id="@+id/ivGuestArrow"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/guest_arrow_content_description"
        android:src="@drawable/ic_arrow_right"
        app:tint="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGuestName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/inter"
        android:text="@string/guest_name_placeholder"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/cbGuest"
        app:layout_constraintStart_toEndOf="@+id/ivGuestArrow"
        app:layout_constraintTop_toTopOf="@+id/ivGuestArrow" />

    <TextView
        android:id="@+id/tvGuestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter"
        android:text="@string/guest_not_registered"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/tvGuestName"
        app:layout_constraintTop_toBottomOf="@+id/tvGuestName" />

    <CheckBox
        android:id="@+id/cbGuest"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/custom_checkbox"
        android:button="@null"
        app:layout_constraintBottom_toBottomOf="@+id/tvGuestTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGuestName" />

</androidx.constraintlayout.widget.ConstraintLayout>
